cint/cling/test/ErrorRecovery/MacroExpansion2.h
BEGIN_NAMESPACE
int i; // expected-error {{redefinition of 'i'}} expected-note {{previous definition is here}} 

END_NAMESPACE
